--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,4 +23,9 @@
         app:titleTextCorlor="#ff0000"
         app:titleTextSize="40sp" />
 
+    <view.SecondOrderBezier
+        android:layout_width="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_height="wrap_content" />
+
 </RelativeLayout>
