--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -1,25 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="vertical"
-    android:layout_height="match_parent">
+    android:layout_marginLeft="15dp"
+    android:layout_marginRight="15dp"
+    android:paddingTop="20dp">
+
 
     <android.support.design.widget.TabLayout
         android:id="@+id/tab_FindFragment_title"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#f00"
-        app:tabIndicatorColor="#fff"
-        app:tabSelectedTextColor="#00f"
+        android:layout_height="28dp"
+        app:tabIndicatorHeight="0dp"
+        app:tabSelectedTextColor="#fff"
+        app:tabTextColor="#000" >
 
-        app:tabTextColor="#fff"/>
+        <!--<android.support.design.widget.TabItem-->
+            <!--android:id="@+id/tab1"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:text="第一个"-->
+            <!--android:background="@drawable/tab_left_background"-->
+            <!--android:layout_height="wrap_content" />-->
+
+        <!--<android.support.design.widget.TabItem-->
+            <!--android:id="@+id/tab2"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:text="第二个"-->
+            <!--android:background="@drawable/tab_right_background"-->
+            <!--android:layout_height="wrap_content" />-->
+
+    </android.support.design.widget.TabLayout>
+
 
     <android.support.v4.view.ViewPager
         android:id="@+id/vp_FindFragment_pager"
         android:layout_width="fill_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"/>
+        android:layout_marginTop="30dp"
+        android:layout_weight="1" />
 
 
 </LinearLayout>
